🎨 style(loading.css): update background color of loading bar to rgba(242, 242, 242, 0.3) for better visibility 🐛 fix(ContactSection.js): remove unnecessary check for name in aboutData to prevent unnecessary rendering of "Nothing data available..." message 🐛 fix(HeroStarted.js): remove unnecessary check for name, position, and description in aboutData to prevent unnecessary rendering of "Nothing data available..." message 🐛 fix(Header.js): change "Nothing data available..." message to "Loading..." to provide better feedback to the user

--- a/public/assets/css/loading.css
+++ b/public/assets/css/loading.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 3px;
-    background-color: #f2f2f2;
+    background-color: rgba(242, 242, 242, 0.3);
 }
 
 .loadingBar {
